# Verigate

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  setup.sh  verigate
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/config/: trusted_issuers.json
backend/config/protected_actions/: issue_onboarding_token.json  unlock_deal_room.json
backend/migrations/: 001_initial_schema.sql  002_revoke_audit_mutations.sql  003_submissions.sql  004_disclosed_facts.sql  005_assessments.sql
backend/policies/: rbac.cedar  schema.cedarschema
backend/policies/requirements/: compliance.json  due_diligence.json  onboarding.json  revalidation.json
backend/src/: config.rs  error.rs  lib.rs  main.rs  seed.rs
backend/src/ai/: assessment_service.rs  llm.rs  mod.rs  pipeline.rs  provider.rs  schema.rs
backend/src/ai/agents/: interpreter.rs  mod.rs  planner.rs  recommender.rs  summarizer.rs
backend/src/auth/: cedar.rs  jwt.rs  login.rs  middleware.rs  mod.rs  requirements.rs
backend/src/credential/: issuer_trust.rs  mod.rs  models.rs  normalizer.rs  sd_jwt.rs  verifier.rs
backend/src/db/: assessments.rs  audit_events.rs  cases.rs  disclosed_facts.rs  mod.rs  submissions.rs
backend/src/domain/: assessment.rs  audit.rs  case.rs  credential.rs  disclosed_fact.rs  mod.rs  state_machine.rs  submission.rs  types.rs
backend/src/routes/: assessments.rs  cases.rs  completeness.rs  events.rs  evidence.rs  health.rs  mod.rs  override_action.rs  requirements.rs  seed.rs  submissions.rs  test_helpers.rs  timeline.rs
backend/src/t3/: agent_identity.rs  mod.rs  protected_action.rs  verification.rs
backend/tests/: ai_adapter_test.rs  ai_agents_test.rs  ai_e2e_test.rs  assessment_e2e_test.rs  auth_integration.rs  case_api_integration.rs  case_lifecycle.rs  credential_test_factory.rs  normalization_integration.rs  sd_jwt_integration.rs  submissions_integration.rs  workflow_e2e_test.rs
demo/: DEMO-SCRIPT.md  video.html
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  playwright.phase1.config.ts  tsconfig.json
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+4 more)
t3n-contract/: Cargo.toml
t3n-contract/src/: claims.rs  crypto.rs  lib.rs  plan.rs  policy.rs  protected.rs  queries.rs  state.rs
t3n-contract/wit/: world.wit
(+92 files in other folders)
