[package]
name = "verigate-backend"
version = "0.1.0"
edition = "2021"
description = "Verigate - Autonomous Counterparty Agent Backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"

# HTTP client (for T3 auth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
cedar-policy = "4"
jsonwebtoken = "9"

# Cryptography (credential verification)
ring = "0.17"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5"

# Password hashing
argon2 = "0.5"

# Async trait support
async-trait = "0.1"

# Async stream utilities (SSE)
async-stream = "0.3"
futures = "0.3"

# Regex (placeholder extraction in protected actions)
regex = "1"

# JSON Schema generation (AI structured output)
schemars = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["full", "test-util"] }
