[package]
name = "verigate-verify"
version = "1.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
